--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,26 +1,40 @@
+.about {
+  background-image: linear-gradient(rgb(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../../assets/Timer/wave2.png");
+  /* height: 110vh; */
+  /* width: 100vw; */
+  /* overflow: hidden; */
+  background-size: cover;
+  background-position: center center;
+}
+
 .content {
   display: flex;
+  margin-top: 2rem;
+  padding: 0 1.5rem;
 }
 
 .information {
-  width: 65vw;
+  width: 100vw;
   height: 100vh;
   /* background-color: green; */
   font-family: var(--font-source-code-pro);
-  font-size: 1.35rem;
-  padding-left: 5rem;
+  font-size: 1.4rem;
+  padding: 0 5rem;
   padding-top: 5rem;
+
+  padding: 2rem;
 }
 
 .information p {
   padding-bottom: 2rem;
 }
 
-.object {
+/* .object {
   width: 35vw;
   height: 100vh;
   background-color: purple;
-}
+} */
 
 .object div {
   width: 200px;
@@ -43,14 +57,14 @@
   .information {
     width: 100%;
     padding: 0;
-    font-size: 1.2rem;
+    /* font-size: 1.4rem; */
     text-align: center;
     height: 75vh;
     /* background-color: #ffcc00;	 */
   }
 
   .font-big {
-    font-size: small;
+    font-size: large;
     font-weight: 700;
     padding-right: 0;
   }
@@ -62,4 +76,13 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.header-text {
+  background-color: black;
+  box-shadow: 1px 2px 65px 36px rgba(0, 0, 0, 0.75);
+}
+
+a {
+  text-decoration: none;
 }
