--- a/src/pages/Timer/Timer.css
+++ b/src/pages/Timer/Timer.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   gap: 2em;
   position: relative;
+  margin-bottom: 4rem;
   /* opacity: 0.4; */
   /* backdrop-filter: opacity(0.2); */
   /* background: linear-gradient(0deg, #4f4f4f 0%, #ffffff 50%, #949494 80%); */
@@ -34,9 +35,16 @@
   justify-content: space-between;
   box-shadow: 0px -2px 74px 1px #f44215;
   background-image: linear-gradient(rgb(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../../assets/Timer/TimerBg.png");
+    url("../../assets/Timer/test.png");
   background-size: cover;
   background-position: center center;
+  transition: background-image 10s, transform 0.5s;
+}
+
+.timer:hover {
+  background-image: linear-gradient(rgb(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("../../assets/Timer/HPO1.gif");
+  transform: scale(1.03);
 }
 
 .time-block {
@@ -77,7 +85,7 @@
   }
 
   .timer {
-    height: 90vh;
+    height: 92vh;
     width: 75vw;
     flex-direction: column;
     align-items: center;
