--- a/src/pages/PrizePool/PrizePool.css
+++ b/src/pages/PrizePool/PrizePool.css
@@ -1,3 +1,9 @@
+.prizepool-container{
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .header-text {
     font-size: 3.7rem;
     text-align: center;
@@ -30,7 +36,7 @@
 }
 
 .card {
-  width: 320px;
+  width: 400px;
   height: 250px;
   position: relative;
   transform-style: preserve-3d;
