--- a/src/pages/Timeline/Timeline.css
+++ b/src/pages/Timeline/Timeline.css
@@ -3,13 +3,6 @@
   background-color: transparent;
 }
 
-.bgDiv {
-  /* background-image: url("../../assets/timeline/explosion.png"); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -3;
-}
-
 .timeline:before {
   content: "";
   position: absolute;
@@ -131,7 +124,7 @@
   color: var(--color-red);
 }
 
-.timeline-element-date {
+.timeline-date {
   margin-top: 10px;
   font-size: 13px;
   font-size: 0.8125rem;
@@ -145,7 +138,7 @@
   color: var(--color-gray-100);
 }
 
-.timeline-element-content .timeline-element-date {
+.timeline-element-content .timeline-date {
   float: left;
   padding: 0.8em 0;
   opacity: 0.7;
@@ -168,7 +161,7 @@
     font-size: 1rem;
   }
 
-  .timeline-element-content .timeline-element-date {
+  .timeline-element-content .timeline-date {
     font-size: 14px;
     font-size: 0.875rem;
   }
@@ -181,7 +174,7 @@
     width: 44%;
   }
 
-  .timeline--two-columns .timeline-element-content .timeline-element-date {
+  .timeline--two-columns .timeline-element-content .timeline-date {
     position: absolute;
     width: 100%;
     left: 124%;
@@ -202,11 +195,11 @@
   .timeline--two-columns
     .timeline-element.timeline-element--right
     .timeline-element-content
-    .timeline-element-date,
+    .timeline-date,
   .timeline--two-columns
     .timeline-element:nth-child(even):not(.timeline-element--left)
     .timeline-element-content
-    .timeline-element-date {
+    .timeline-date {
     left: auto;
     right: 124%;
     text-align: right;
