bg changed for timeline

--- a/src/pages/Timeline/Timeline.css
+++ b/src/pages/Timeline/Timeline.css
@@ -39,6 +39,7 @@
     url("../../assets/timeline/explosion.png");
   background-repeat: no-repeat;
   background-size: cover;
+  resize: vertical;
   z-index: -3;
 }
 
