--- a/src/pages/PrizePool/PrizePool.css
+++ b/src/pages/PrizePool/PrizePool.css
@@ -1,13 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500&display=swap");
 .prizepool-container{
   margin: 0;
   padding: 0;
   overflow: hidden;
 }
-
+body{
+  font-family: var(--font-poppins);
+}
 .header-text {
     font-size: 3.7rem;
     text-align: center;
-    font-weight: 500;  
+    font-weight: 500;
+    
 }
 .header-text1 {
     font-size: 2.7rem;
@@ -71,12 +77,13 @@
   transform: rotateY(0deg) translateZ(160px); 
   border-radius: 34px 3px 0 0;
 }
-
+.font-style{
+  font-family: 'Sarala'; 
+}
 h1{
   margin: 0;
   font-size: 38px;
   letter-spacing: -.25px;
-  font-family: 'Sarala'; 
   font-weight: 700;
 }
 
@@ -127,10 +134,13 @@ h1{
       margin-top:350px;
       font-size: 3rem;
     }
+    h1{
+      padding-left: 12px;
+    }
   .wrapper{
     display: flex;
     flex-direction: column;
-    padding-left: 40px;
+    padding-left: 80px;
     padding-bottom: 150px;
     position: relative;
     justify-content: space-around;
@@ -148,6 +158,9 @@ h1{
   }
   .center-card {
     transform: scale(0.9);
+  }
+  .img-wrapper{
+    top: 83px;
   }
 }
 .spn-container {
