--- a/src/pages/Speakers/Speakers.css
+++ b/src/pages/Speakers/Speakers.css
@@ -27,7 +27,6 @@ head {
     color: #ffffff;
     background-image: url('../../assets/Speakers/background.jpeg');
     background-size: cover;
-    background-repeat: no-repeat;
     
   }
 
@@ -36,51 +35,43 @@ head {
     padding: 30px 0;
   }
 
-   .background {
-    
-    width: 100%;
-    background-image:url('../../assets/Speakers/background.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-  } 
 
-
-  .card-container {
+  .carda-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 20px;
   }
 
-  .card {
+  .carda {
     background-color: #000000;
     color: #ffffff;
     padding: 20px;
     margin: 10px;
-    border-radius: 10px;
+    border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
     max-width: 250px;
+
   }
 
-  .card img {
+  .carda img {
     width: 100%;
     border-radius: 50%;
   }
 
-  .card h2 {
+  .carda h2 {
   
     margin-top: 5px;
     font-size: 1.5em;
     color: #e74500;
   }
 
-  .card p {
+  .carda p {
     margin-top: 5px;
   }
 
-  .card a {
+  .carda a {
     display: block;
     margin-top: 10px;
     color: #0077B5;
