--- a/src/pages/PrizePool/PrizePool.css
+++ b/src/pages/PrizePool/PrizePool.css
@@ -33,7 +33,7 @@ body{
 
 .wrapper {
   top: 130px;
-  width: 100vw;
+  width: 101vw;
   height: 480px;
   perspective: 800px;
   position: relative;
@@ -60,7 +60,10 @@ body{
   transition: all 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
 }
 .center-card {
-  transform: scale(1);
+  transform: scale(0.9);
+}
+.center-card .prize{
+  transform: scale(1.12);
 }
 
 .front1{
@@ -99,7 +102,7 @@ h1{
   transform-origin: top right;
   transition: transform 300ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
   transition-delay: 100ms;
-  width: 80%;
+  width: 70%;
  padding-left: 200px;
   pointer-events: none;
 }
