--- a/src/pages/ChiefGuest/ChiefGuest.css
+++ b/src/pages/ChiefGuest/ChiefGuest.css
@@ -4,7 +4,7 @@
     background-image: url("../../assets/ChiefGuest/background.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     font-family: Arial, sans-serif;
 }
 
@@ -14,7 +14,10 @@ header {
 }
 
 header h1 {
+    font-size: 3.7rem;
+    margin-bottom: 20px;
     color: white;
+    font-weight: 500;
 }
 
 main {
