--- a/src/pages/ProblemStatement/ProblemStatement.css
+++ b/src/pages/ProblemStatement/ProblemStatement.css
@@ -55,6 +55,8 @@
     background-image: url('../../assets/ProblemStatement/CardW1.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
     /* transition: transform 0.3s ease; Add transition for smooth effect */
 }
 
@@ -72,6 +74,8 @@
     background-image: url('../../assets/ProblemStatement/CardW2.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-web-3 {
@@ -83,6 +87,8 @@
     background-image: url('../../assets/ProblemStatement/CardW3.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-ai-1 {
@@ -94,6 +100,8 @@
     background-image: url('../../assets/ProblemStatement/CardA1.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-ai-2 {
@@ -105,6 +113,8 @@
     background-image: url('../../assets/ProblemStatement/CardA2.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-ai-3 {
@@ -116,6 +126,8 @@
     background-image: url('../../assets/ProblemStatement/CardA3.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-block-1 {
@@ -127,6 +139,8 @@
     background-image: url('../../assets/ProblemStatement/CardB1.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-block-2 {
@@ -138,6 +152,8 @@
     background-image: url('../../assets/ProblemStatement/CardB2.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-block-3 {
@@ -149,6 +165,8 @@
     background-image: url('../../assets/ProblemStatement/CardB3.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .card-open-1 {
@@ -160,6 +178,8 @@
     background-image: url('../../assets/ProblemStatement/CardO1.png');
     background-size: cover;
     color: white;
+    filter: blur(5px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 
@@ -181,7 +201,7 @@ p {
 
 @media screen and (max-width: 768px) {
     .card-web-1 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -189,7 +209,7 @@ p {
     }
 
     .card-web-2 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -197,7 +217,7 @@ p {
     }
 
     .card-web-3 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -205,7 +225,7 @@ p {
     }
 
     .card-ai-1 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -213,7 +233,7 @@ p {
     }
 
     .card-ai-2 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -221,7 +241,7 @@ p {
     }
 
     .card-ai-3 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -229,7 +249,7 @@ p {
     }
 
     .card-block-1 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -237,7 +257,7 @@ p {
     }
 
     .card-block-2 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -245,7 +265,7 @@ p {
     }
 
     .card-block-3 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
@@ -253,7 +273,7 @@ p {
     }
 
     .card-open-1 {
-        width: 250px;
+        width: 270px;
         /* Adjusted width for phone view */
         height: 340px;
         /* Height remains the same */
