Speaker cards aligned

--- a/src/pages/ChiefGuest/ChiefGuest.css
+++ b/src/pages/ChiefGuest/ChiefGuest.css
@@ -28,7 +28,7 @@ main {
 }
 
 .cardb {
-    background: linear-gradient(to bottom, #c64910, #201313);
+    background: linear-gradient(to bottom, #fa511a, #201313);
     color: #ffffff;;
     padding: 20px;
     margin: 10px;
