--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -57,7 +57,7 @@
 
 @media (max-width: 768px) {
   .about-container{
-    overflow: hidden;
+    padding-bottom: 100px;
   }
   .content {
     flex-direction: column-reverse;
