--- a/src/pages/PrizePool/PrizePool.css
+++ b/src/pages/PrizePool/PrizePool.css
@@ -13,8 +13,7 @@ body{
 .header-text {
     font-size: 3.7rem;
     text-align: center;
-    font-weight: 500;
-    
+    font-weight: 500;   
 }
 .header-text1 {
     font-size: 2.7rem;
@@ -25,6 +24,12 @@ body{
   font-size: 3.7rem;
   text-align: center;
   font-weight: 500;  
+}
+.header-text3 {
+  font-size: 3.7rem;
+  text-align: center;
+  font-weight: 500; 
+  padding-top: 100px; 
 }
   .orange {
     color: #fa511a;
@@ -55,12 +60,12 @@ body{
 .card > div {
   position: absolute;
   width: 320px;
-  height: 250px;
+  height: 260px;
   padding: 34px 21px;
   transition: all 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
 }
 .center-card {
-  transform: scale(0.9);
+  transform: scale(1);
 }
 .center-card .prize{
   transform: scale(1.12);
@@ -94,7 +99,7 @@ h1{
 .price{
   position: absolute;
   bottom: 34px;
-  left: 21px;
+  left: 10px;
   font-size: 34px;
   opacity: 5.2;
 }
@@ -138,6 +143,10 @@ h1{
       margin-top:350px;
       font-size: 3rem;
     }
+    .header-text3 {
+      margin-top:150px;
+      font-size: 3rem;
+    }
     h1{
       padding-left: 12px;
     }
@@ -145,26 +154,35 @@ h1{
     display: flex;
     flex-direction: column;
     padding-left: 80px;
-    padding-bottom: 150px;
     position: relative;
     justify-content: space-around;
     align-items: center;
-    gap: 330px;
+    gap: 200px;
   }
   .card >div{
     width: 230px;
-    height: 220px;
+    height: 240px;
     padding: 10px 5px;
   }
   .prize{
     width: 70%;
-    padding-left: 140px;
+    padding-left: 160px;
   }
   .center-card {
-    transform: scale(0.9);
+    transform: scale(0.95);
   }
   .img-wrapper{
     top: 83px;
+  }
+  .price{
+    position: absolute;
+    bottom: 34px;
+    left: 0px;
+    font-size: 34px;
+    opacity: 5.2;
+  }
+  .track2{
+    padding-top: 250px;
   }
 }
 .spn-container {
